Fix: Homepage grid layout on mobile

--- a/site/src/components/elements/Header/Header.module.scss
+++ b/site/src/components/elements/Header/Header.module.scss
@@ -31,6 +31,9 @@
     margin-right: 1rem;
     color: var(--white);
   }
+  &:focus {
+    background-color: red;
+  }
 }
 
 .info {
