--- a/site/src/styles/globals.scss
+++ b/site/src/styles/globals.scss
@@ -85,6 +85,16 @@ p {
   font-weight: 400;
   font-style: normal;
 }
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
 /* 
 font-family: 'IBM Plex Mono', monospace;
 font-family: 'IBM Plex Sans', sans-serif; */
